--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "socket-io": "^1.0.0",
     "validator": "^13.7.0"
   }
 }
