--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "serveur.js",
   "scripts": {
+    "start": "nodemon serveur.js",
     "test": "nodemon serveur.js"
   },
   "author": "",
@@ -18,7 +19,7 @@
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "socket-io": "^1.0.0",
+    "socket.io": "^4.4.1",
     "validator": "^13.7.0"
   }
 }
